# graph-database-project

./: README.md  app.py  pyproject.toml  queries.py  requirements.txt
output/: query-1.json  query-2.json  query-3.json  query-4.json  query-5.json
